<resources>
    <string name="app_name">ayp API</string>
    <string name="simple_example">Simple example</string>
    <string name="fullscreen_example">Fullscreen example</string>
    <string name="complete_example">Complete example</string>
    <string name="recycler_view_example">RecyclerView example</string>
    <string name="custom_ui_example">Custom UI example</string>
    <string name="view_pager_example">ViewPager example</string>
    <string name="live_video_example">Live video example</string>
    <string name="player_status_example">Player state example</string>
    <string name="picture_in_picture_example">PictureInPicture example</string>
    <string name="chromecast_example">Chromecast example</string>
    <string name="fragment_example">Fragment example</string>
    <string name="iframe_player_options_example">IFrame Player Options example</string>
    <string name="playlist_example">Playlist example</string>
    <string name="default_custom_ui_example">Default custom UI example</string>
    <string name="no_lifecycle_observer_example">NoLifecycleObserver example</string>
    <string name="compose_example">Compose example</string>
    <string name="compose_fullscreen_example">Compose fullscreen example</string>
    <string name="lazy_column_example">LazyColumn example</string>
</resources>
