<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group
        android:id="@+id/examples"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/open_base_example_menu_item"
            android:title="@string/basic_example" />

        <item
            android:id="@+id/open_fragment_example_menu_item"
            android:title="@string/fragment_example" />

        <item
            android:id="@+id/open_recycler_view_example_menu_item"
            android:title="@string/recycler_view_example" />

        <item
            android:id="@+id/open_view_pager_example_menu_item"
            android:title="@string/view_pager_example" />

        <item
            android:id="@+id/open_custom_ui_example_menu_item"
            android:title="@string/custom_ui_example" />

        <item
            android:id="@+id/open_live_video_example_menu_item"
            android:title="@string/live_video_example" />

        <item
            android:id="@+id/open_player_status_example_menu_item"
            android:title="@string/player_status_example" />

        <item
            android:id="@+id/open_picture_in_picture_example_menu_item"
            android:title="@string/picture_in_picture_example" />

        <item
            android:id="@+id/open_chromecast_example_menu_item"
            android:title="@string/chromecast_example" />

    </group>

    <group
        android:id="@+id/social"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/star_on_github"
            android:title="@string/star_on_github"
            android:icon="@drawable/ic_github_24dp" />

        <item
            android:id="@+id/rate_on_playstore"
            android:title="@string/rate_on_playstore"
            android:icon="@drawable/ic_playstore_24dp" />
    </group>
</menu>